Display command stdout and stderr

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
           </thead>
           <tbody></tbody>
         </table>
-        <pre id="status-output"></pre>
+        <pre id="command-output"></pre>
       </div>
     </div>
     <script src="script.js"></script>
