--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
         <select id="select-command"></select>
         <button id="execute-command">Execute</button>
       </div>
-      <div class="status">
+      <div class="system-info">
         <table id="diskUsageTable">
           <thead>
             <tr>
