--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div id="main">
@@ -27,6 +28,5 @@
       </table>
       <pre id="command-output"></pre>
     </div>
-    <script src="script.js"></script>
   </body>
 </html>
